2010-07-25  AIDA Shinra <shinra@j10n.org>

	* [w3m-dev 04049] Ctrl-C safe resolver
	* fm.h (GRAPHIC_CHAR_ASCII, GRAPHIC_CHAR_CHARSET, GRAPHIC_CHAR_ALL): removed.
	* fm.h: UseGraphicChar is initialized as FALSE.
	* main.c (sig_chld): use TRUE and FALSE instead of GRAPHIC_CHAR_ALL and GRAPHIC_CHAR_ASCII.
	* merge ambiguous width patch ( http://www.j10n.org/files/w3m-cvs-1.914-ambwidth.patch ).

2010-07-24  Ito Hiroyuki  <ZXB01226 at nifty.com>

	* [w3m-dev 04326] suppress compile warnings
	* file.c (digest_hex): type of the parameter s is "unsigned char *".
	(AuthDigestCred): use unsigned char.
	(ex_efct): type of the function is "static int".

2010-07-20  Sascha Silbe <sascha-debian-bugs-w3m-1@silbe.org>

	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=523159#5
	* url.c (openSSLHandle): add support for TLS SNI (Server Name Indication)

2010-07-19  Karsten Schoelzel <kuser@gmx.de>

	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=329862#20
	* table.c (feed_table_tag): check displayLinkNumber.
	* proto.h: add getLinkNumberStr().
	* main.c (do_dump): check displayLinkNumber.
	* fm.h: add global variable displayLinkNumber.
	* file.c (getLinkNumberStr): added.
	(process_input, process_select, HTMLtagproc1): check displayLinkNumber.

2010-07-19  Karsten Schoelzel <kuser@gmx.de>

	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=329863#8
	* rc.c: Introduce option pseudo_inlines.
	* fm.h: add global variable pseudoInlines.
	* file.c (process_img): check q.

2010-07-19  "Trent W. Buck" <twb@cybersource.com.au>

	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=537706#10
	* rc.c (interpret_rc): check line->length before call Strchop().

2010-07-19  Karsten Schoelzel <kuser@gmx.de>

	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=366284#5
	* rc.c (init_rc): check config_file is NULL or not.
	(panel_set_option): check config_file instead of no_rc_dir.

2010-07-19  Karsten Schoelzel <kuser@gmx.de>

	* http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=261174#10